Tue Mar  2 11:58:52 2010                                           mej

Fix infinite loop in source scanning.
----------------------------------------------------------------------
Mon Jan 31 23:16:32 2011                        Michael Jennings (mej)

Merge old caos-builder into Mezzanine as autobuilder/mzbuilder.
----------------------------------------------------------------------
Mon Jan 31 23:18:03 2011                        Michael Jennings (mej)

Refactor spec file detection for FST's.  Needs testing.  :-)
----------------------------------------------------------------------
Tue Feb  1 00:42:23 2011                        Michael Jennings (mej)

Move that back to Util.pm until I can refactor this mess. :-(
----------------------------------------------------------------------
Wed Feb  9 18:11:33 2011                        Michael Jennings (mej)

Minor tweaks.
----------------------------------------------------------------------
Fri Feb 11 18:20:56 2011                        Michael Jennings (mej)

Don't cross mount points when syncing instroot.
----------------------------------------------------------------------
Thu Feb 24 19:14:09 2011                        Michael Jennings (mej)

Refine build-time stats display.

Allow mzreposcan --old --remove to actually remove packages.
----------------------------------------------------------------------
Fri Mar 25 16:50:16 2011                        Michael Jennings (mej)

Allow adding of RPM and DEB package files to repositories.
----------------------------------------------------------------------
Fri Apr  1 13:58:49 2011                        Michael Jennings (mej)

Fix rpmcmp.c to be compatible with RPM 4.8.  Sigh.
----------------------------------------------------------------------
Sat Jun 25 12:41:32 2011                        Michael Jennings (mej)

Fix problem importing packages on RHEL6.
----------------------------------------------------------------------